tests/pass/05_recursion.lang
функция факториал(целое н) : целое {
    если (н < 2) {
        вернуть 1;
    }
    вернуть н * факториал(н - 1);
}

функция Начало() : целое {
    печать(факториал(5)); // Должно вывести 120
    вернуть 0;
}
