tests/fail/24_builtin_wrong_arity.lang
// ОЖИДАЕТСЯ ОШИБКА: требует ровно 1 аргумент
функция Начало() : целое {
    печать();
    вернуть 0;
}
